service/fibonacci-deployment-with-istio.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fibonacci-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fibonacci
        version: v1
    spec:
      containers:
        - name: fibonacci-container
          image: "fibonacci:1"
          #image: "registry.ng.bluemix.net/<namespace>/fibonacci:latest"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "250m"
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-service
  labels:
    app: fibonacci
spec:
  selector:
    app: fibonacci
  ports:
  - port: 8080
    name: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: fibonacci-service
          servicePort: 8080
